--- a/src/app/AppLayout.css
+++ b/src/app/AppLayout.css
@@ -2,20 +2,18 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    background-color: ivory;
+    background-color: rgb(179, 218, 233);
 }
 
 .weather-container {
     box-sizing: border-box;
-    border-right: 1px solid darkolivegreen;
-    margin: 20px;
+    margin: 40px;
     width: 60%;
 }
 
 .city-container {
     box-sizing: border-box;
-    border-left: 1px solid darkolivegreen;
-    margin: 20px;
+    margin: 40px;
     width: 40%;
     justify-content: center;
 }
