--- a/src/features/cities/Cities.css
+++ b/src/features/cities/Cities.css
@@ -3,3 +3,70 @@
     display: flex;
     justify-content: center;
 }
+
+input {
+    width: 400px;
+    font-size: 24px;
+    border-radius: 20px;
+    margin: 0px 20px 20px 20px;
+    padding: 20px;
+}
+
+.search-list {
+    width: 100%;
+    display: block;
+    height: 200px;
+    background-color: whitesmoke;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.add-button {
+    border-radius: 10px;
+}
+
+table {
+    width: 100%;
+}
+
+th {
+    border-bottom: solid 0.5px black;
+    text-align: left;
+}
+
+.cities-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.city-button {
+    padding: 0px 20px;
+    margin: 5px 10px;
+    font-size: 16px;
+    border-radius: 8px;
+    height: 30px;
+}
+
+.city-details {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: left;
+}
+
+iframe {
+    aspect-ratio: 1 / 1;
+    width: 60%;
+    height: 100%
+}
+
+.details {
+    margin-top: 0px;
+}
+
+li {
+    margin-bottom: 5px;
+}
